bindings/dart/lib/src/ffi/aa_bindings.g.dart

// GENERATED by package:ffigen from include/aa.h. Do not edit by hand;
// run `dart run ffigen` to regenerate after the C header changes.
// ignore_for_file: always_specify_types, camel_case_types, non_constant_identifier_names, unused_element, unused_field, doc_directive_unknown, no_leading_underscores_for_library_prefixes

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import, unused_element, deprecated_member_use_from_same_package
import 'dart:ffi' as ffi;

/// Low-level FFI bindings for the ZeroDev AA C API (include/aa.h).
class AaBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  AaBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  AaBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// Create a Kernel smart account.
  ///
  /// `address` may be NULL, in which case the sender address is derived
  /// counterfactually via CREATE2 from `(owner, index, version)` — the standard
  /// flow. When non-NULL, it pins the account's sender to that address.
  ///
  /// This is the migration path for accounts whose original CREATE2 inputs
  /// (older kernel version, factory salt) this SDK cannot reproduce — post-
  /// upgrade the on-chain address is fixed but `(signer, version, index)` in
  /// the new SDK derives a different one. The caller passes the correct
  /// address; the SDK has nothing to cross-check against.
  ///
  /// Pinning affects the sender only. Factory init_code is still emitted on
  /// the first UserOp exactly as it would be for a counterfactually-derived
  /// account (governed by the EntryPoint nonce). Callers pinning an
  /// already-deployed account whose EntryPoint nonce is still 0 (rare —
  /// funded but never used) should drop the factory bytes via the low-level
  /// UserOp API.
  aa_status aa_account_create(
    ffi.Pointer<aa_context_t> ctx,
    ffi.Pointer<aa_signer_t> signer,
    aa_kernel_version version,
    int index,
    ffi.Pointer<ffi.Uint8> address,
    ffi.Pointer<ffi.Pointer<aa_account_t>> out,
  ) {
    return aa_status.fromValue(_aa_account_create(
      ctx,
      signer,
      version.value,
      index,
      address,
      out,
    ));
  }

  late final _aa_account_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<aa_context_t>,
              ffi.Pointer<aa_signer_t>,
              ffi.UnsignedInt,
              ffi.Uint32,
              ffi.Pointer<ffi.Uint8>,
              ffi.Pointer<ffi.Pointer<aa_account_t>>)>>('aa_account_create');
  late final _aa_account_create = _aa_account_createPtr.asFunction<
      int Function(
          ffi.Pointer<aa_context_t>,
          ffi.Pointer<aa_signer_t>,
          int,
          int,
          ffi.Pointer<ffi.Uint8>,
          ffi.Pointer<ffi.Pointer<aa_account_t>>)>();

  aa_status aa_account_destroy(
    ffi.Pointer<aa_account_t> account,
  ) {
    return aa_status.fromValue(_aa_account_destroy(
      account,
    ));
  }

  late final _aa_account_destroyPtr = _lookup<
          ffi
          .NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<aa_account_t>)>>(
      'aa_account_destroy');
  late final _aa_account_destroy = _aa_account_destroyPtr
      .asFunction<int Function(ffi.Pointer<aa_account_t>)>();

  aa_status aa_account_get_address(
    ffi.Pointer<aa_account_t> account,
    ffi.Pointer<ffi.Uint8> addr_out,
  ) {
    return aa_status.fromValue(_aa_account_get_address(
      account,
      addr_out,
    ));
  }

  late final _aa_account_get_addressPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<aa_account_t>,
              ffi.Pointer<ffi.Uint8>)>>('aa_account_get_address');
  late final _aa_account_get_address = _aa_account_get_addressPtr.asFunction<
      int Function(ffi.Pointer<aa_account_t>, ffi.Pointer<ffi.Uint8>)>();

  /// Allocate `size` bytes via libc `malloc`. Returns NULL on failure or
  /// when `size` is 0. The matching free is `aa_free`.
  ///
  /// Audit F-02: prefer this over the host's native allocator when handing
  /// buffers back to the SDK across FFI (HTTP responses, paymaster_data).
  /// It guarantees the SDK can safely call libc `free` on the pointer on
  /// every platform, since `aa_alloc` IS libc malloc.
  ffi.Pointer<ffi.Void> aa_alloc(
    int size,
  ) {
    return _aa_alloc(
      size,
    );
  }

  late final _aa_allocPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function(ffi.Size)>>(
          'aa_alloc');
  late final _aa_alloc =
      _aa_allocPtr.asFunction<ffi.Pointer<ffi.Void> Function(int)>();

  /// ---- Context (holds RPC URLs, chain config) ----
  aa_status aa_context_create(
    ffi.Pointer<ffi.Char> project_id,
    ffi.Pointer<ffi.Char> rpc_url,
    ffi.Pointer<ffi.Char> bundler_url,
    int chain_id,
    ffi.Pointer<ffi.Pointer<aa_context_t>> out,
  ) {
    return aa_status.fromValue(_aa_context_create(
      project_id,
      rpc_url,
      bundler_url,
      chain_id,
      out,
    ));
  }

  late final _aa_context_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Uint64,
              ffi.Pointer<ffi.Pointer<aa_context_t>>)>>('aa_context_create');
  late final _aa_context_create = _aa_context_createPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Pointer<aa_context_t>>)>();

  aa_status aa_context_destroy(
    ffi.Pointer<aa_context_t> ctx,
  ) {
    return aa_status.fromValue(_aa_context_destroy(
      ctx,
    ));
  }

  late final _aa_context_destroyPtr = _lookup<
          ffi
          .NativeFunction<ffi.UnsignedInt Function(ffi.Pointer<aa_context_t>)>>(
      'aa_context_destroy');
  late final _aa_context_destroy = _aa_context_destroyPtr
      .asFunction<int Function(ffi.Pointer<aa_context_t>)>();

  /// Create an EIP-7702 account. The account's address is the signer's EOA
  /// address; there is no CREATE2, no init code, and no index parameter. On the
  /// first UserOperation the SDK signs an authorization tuple (chainId, Kernel
  /// implementation for `version`, EOA nonce) and attaches it via the
  /// `eip7702Auth` field. Today only KERNEL_V3_3 supports EIP-7702.
  aa_status aa_context_new_account_7702(
    ffi.Pointer<aa_context_t> ctx,
    ffi.Pointer<aa_signer_t> signer,
    aa_kernel_version version,
    ffi.Pointer<ffi.Pointer<aa_account_t>> out,
  ) {
    return aa_status.fromValue(_aa_context_new_account_7702(
      ctx,
      signer,
      version.value,
      out,
    ));
  }

  late final _aa_context_new_account_7702Ptr = _lookup<
          ffi.NativeFunction<
              ffi.UnsignedInt Function(
                  ffi.Pointer<aa_context_t>,
                  ffi.Pointer<aa_signer_t>,
                  ffi.UnsignedInt,
                  ffi.Pointer<ffi.Pointer<aa_account_t>>)>>(
      'aa_context_new_account_7702');
  late final _aa_context_new_account_7702 =
      _aa_context_new_account_7702Ptr.asFunction<
          int Function(ffi.Pointer<aa_context_t>, ffi.Pointer<aa_signer_t>, int,
              ffi.Pointer<ffi.Pointer<aa_account_t>>)>();

  aa_status aa_context_set_gas_middleware(
    ffi.Pointer<aa_context_t> ctx,
    aa_gas_price_fn middleware,
  ) {
    return aa_status.fromValue(_aa_context_set_gas_middleware(
      ctx,
      middleware,
    ));
  }

  late final _aa_context_set_gas_middlewarePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<aa_context_t>,
              aa_gas_price_fn)>>('aa_context_set_gas_middleware');
  late final _aa_context_set_gas_middleware = _aa_context_set_gas_middlewarePtr
      .asFunction<int Function(ffi.Pointer<aa_context_t>, aa_gas_price_fn)>();

  aa_status aa_context_set_http_free_fn(
    ffi.Pointer<aa_context_t> ctx,
    aa_http_free_fn free_fn,
  ) {
    return aa_status.fromValue(_aa_context_set_http_free_fn(
      ctx,
      free_fn,
    ));
  }

  late final _aa_context_set_http_free_fnPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<aa_context_t>,
              aa_http_free_fn)>>('aa_context_set_http_free_fn');
  late final _aa_context_set_http_free_fn = _aa_context_set_http_free_fnPtr
      .asFunction<int Function(ffi.Pointer<aa_context_t>, aa_http_free_fn)>();

  aa_status aa_context_set_http_transport(
    ffi.Pointer<aa_context_t> ctx,
    aa_http_fn transport,
    ffi.Pointer<ffi.Void> transport_ctx,
  ) {
    return aa_status.fromValue(_aa_context_set_http_transport(
      ctx,
      transport,
      transport_ctx,
    ));
  }

  late final _aa_context_set_http_transportPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<aa_context_t>, aa_http_fn,
              ffi.Pointer<ffi.Void>)>>('aa_context_set_http_transport');
  late final _aa_context_set_http_transport =
      _aa_context_set_http_transportPtr.asFunction<
          int Function(
              ffi.Pointer<aa_context_t>, aa_http_fn, ffi.Pointer<ffi.Void>)>();

  /// Audit F-02: register a free function paired with the paymaster
  /// middleware. Pass NULL to clear (the SDK then frees `paymaster_data` via
  /// libc free — only safe when the middleware allocated via aa_alloc or
  /// libc malloc, as the built-in aa_paymaster_zerodev does).
  aa_status aa_context_set_paymaster_free_fn(
    ffi.Pointer<aa_context_t> ctx,
    aa_paymaster_free_fn free_fn,
  ) {
    return aa_status.fromValue(_aa_context_set_paymaster_free_fn(
      ctx,
      free_fn,
    ));
  }

  late final _aa_context_set_paymaster_free_fnPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<aa_context_t>,
              aa_paymaster_free_fn)>>('aa_context_set_paymaster_free_fn');
  late final _aa_context_set_paymaster_free_fn =
      _aa_context_set_paymaster_free_fnPtr.asFunction<
          int Function(ffi.Pointer<aa_context_t>, aa_paymaster_free_fn)>();

  aa_status aa_context_set_paymaster_middleware(
    ffi.Pointer<aa_context_t> ctx,
    aa_paymaster_fn middleware,
  ) {
    return aa_status.fromValue(_aa_context_set_paymaster_middleware(
      ctx,
      middleware,
    ));
  }

  late final _aa_context_set_paymaster_middlewarePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<aa_context_t>,
              aa_paymaster_fn)>>('aa_context_set_paymaster_middleware');
  late final _aa_context_set_paymaster_middleware =
      _aa_context_set_paymaster_middlewarePtr.asFunction<
          int Function(ffi.Pointer<aa_context_t>, aa_paymaster_fn)>();

  void aa_free(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _aa_free(
      ptr,
    );
  }

  late final _aa_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'aa_free');
  late final _aa_free =
      _aa_freePtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// ZeroDev gas price middleware. Calls zd_getUserOperationGasPrice.
  aa_status aa_gas_zerodev(
    ffi.Pointer<aa_context_t> ctx,
    ffi.Pointer<aa_gas_prices_t> out,
  ) {
    return aa_status.fromValue(_aa_gas_zerodev(
      ctx,
      out,
    ));
  }

  late final _aa_gas_zerodevPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<aa_context_t>,
              ffi.Pointer<aa_gas_prices_t>)>>('aa_gas_zerodev');
  late final _aa_gas_zerodev = _aa_gas_zerodevPtr.asFunction<
      int Function(ffi.Pointer<aa_context_t>, ffi.Pointer<aa_gas_prices_t>)>();
